cabal-version: 3.0
name:          openapi3-th
version:       0
data-files:    examples/**/*.yaml

common base
  default-language:   GHC2021
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    TemplateHaskell
    TypeFamilies
    UnicodeSyntax

library
  import:          base
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , filepath
    , http-conduit
    , iri
    , quaalude
    , template-haskell
    , text
    , transformers
    , vector
    , wai
    , warp
    , yaml
    , yield

  hs-source-dirs:  library

  -- cabal-fmt: expand library
  exposed-modules:
    OpenApiTH
    OpenApiTH.DataType
    OpenApiTH.Declare
    OpenApiTH.Operation
    OpenApiTH.Options
    OpenApiTH.OptionsBuilder
    OpenApiTH.ReadSpecFile
    OpenApiTH.Request
    OpenApiTH.RequestMessage
    OpenApiTH.ResolveSpecPath
    OpenApiTH.Schema
    OpenApiTH.ServerAddress
    OpenApiTH.Spec
    OpenApiTH.SpecPath
    OpenApiTH.Wai

test-suite test
  import:         base
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test examples
  build-depends:
    , base
    , hspec
    , openapi3-th
    , quaalude
    , template-haskell
    , text

  -- cabal-fmt: expand examples
  other-modules:  OpenApiGuide.BasicStructure.Main
